@@ -15,6 +15,7 @@ Version - 2.5 -
 -Added new example dataset of macroperforate foram relationships and ages taken from Aze et al. 2011 for use in testing taxa2phylo and other related functions
 -Added a tolerance argument to cal3timePaleoPhy to stop spurious warnings related to floating precision about terminal tip ages that were barely distinguishable from zero
 -Discovered broken while() loop in getUltimateAnc and testParentChild, added code to avoid infinite-running while loops
+-Added example dataset of character matrix and cladogram from Song and Zhang (2014) study of dicranograptid relationships
 -
 
 Version - 2.4 - 05-01-15
